--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,23 +52,15 @@ on:
         required: true
         type: boolean
         default: false
-      # merge_release_branch:
-      #   description: 'Merges the code freeze release branch, creates the release tag, and creates a new Github release'
-      #   required: true
-      #   type: boolean
-      #   default: false
-
-# env:
-#   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#   REPO_NAME: ${{ github.event.repository.name }}
-#   CURRENT_VERSION: ${{ format('{0}.{1}', fromJson(inputs.current_version_array)[0], fromJson(inputs.current_version_array)[1]) }}
-#   CURRENT_FULL_VERSION: ${{ format('{0}.{1}.{2}', fromJson(inputs.current_version_array)[0], fromJson(inputs.current_version_array)[1], fromJson(inputs.current_version_array)[2]) }}
-#   NEXT_VERSION: ${{ format('{0}.{1}', fromJson(inputs.next_version_array)[0], fromJson(inputs.next_version_array)[1]) }}
-#   NEXT_FULL_VERSION: ${{ format('{0}.{1}.{2}', fromJson(inputs.next_version_array)[0], fromJson(inputs.next_version_array)[1], fromJson(inputs.next_version_array)[2]) }}
+      merge_release_branch:
+        description: 'Merges the code freeze release branch, creates the release tag, and creates a new Github release'
+        required: true
+        type: boolean
+        default: false
 
 jobs:
   release_procedures:
-    uses: nv-morpheus/utilities/.github/workflows/release_procedures.yml@mdd_release-procedures
+    uses: nv-morpheus/utilities/.github/workflows/release_procedures.yml@branch-24.03
     with:
       current_version_array: ${{ inputs.current_version_array }}
       next_version_array: ${{ inputs.next_version_array }}
@@ -76,7 +68,5 @@ jobs:
       create_next_release_branch: ${{ inputs.create_next_release_branch }}
       update_next_release_versions: ${{ inputs.update_next_release_versions }}
       update_changelog: ${{ inputs.update_changelog }}
-      # merge_release_branch: ${{ inputs.merge_release_branch }}
-    secrets:
-      ACTIONS_APP_ID: ${{ secrets.ACTIONS_APP_ID }}
-      ACTIONS_APP_KEY: ${{ secrets.ACTIONS_APP_KEY }}
+      merge_release_branch: ${{ inputs.merge_release_branch }}
+    secrets: inherit
