--- a/DFP/package.json
+++ b/DFP/package.json
@@ -32,5 +32,8 @@
   "devDependencies": {
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2"
+  },
+  "resolutions": {
+    "tough-cookie": "^4.1.3"
   }
 }
