--- a/GraphVis/package.json
+++ b/GraphVis/package.json
@@ -27,7 +27,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.64",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.64",
+    "@electron-forge/plugin-webpack": "^6.0.0-beta.64",
     "@timfish/forge-externals-plugin": "0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
