--- a/GraphVis/package.json
+++ b/GraphVis/package.json
@@ -27,7 +27,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.64",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
-    "@electron-forge/plugin-webpack": "^6.0.0-beta.64",
+    "@electron-forge/plugin-webpack": "6.0.0-beta.64",
     "@timfish/forge-externals-plugin": "0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -74,14 +74,14 @@
     "recompose": "npm:react-recompose@0.31.2",
     "react-dom": "17.0.2",
     "utf-8-validate": "5.0.9",
-    "webpack": "^5.94.0",
+    "webpack": "5.94.0",
     "ws": "8.5.0"
   },
   "overrides": {
     "mjolnir.js": "2.6.0"
   },
   "resolutions": {
-    "tough-cookie": "^4.1.3",
-    "serialize-javascript": "^6.0.2"
+    "tough-cookie": "4.1.3",
+    "serialize-javascript": "6.0.2"
   }
 }
